# RagTag

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE-3RD-PARTY.txt  README.md  notes.txt  todo.txt
RagTag/: CMakeLists.txt  RagTag.cpp  RagTag.h  about_dialog.cpp  about_dialog.h  flicker_app.cpp  flicker_app.h  icons.rc  main_frame.cpp  main_frame.h  rag_tag_app.cpp  rag_tag_app.h  rag_tag_util.cpp  rag_tag_util.h  summary_frame.cpp  summary_frame.h  tag_entry_dialog.cpp  tag_entry_dialog.h  tag_entry_frame.cpp  tag_entry_frame.h  tag_map.cpp  tag_map.h  tag_toggle_panel.cpp  tag_toggle_panel.h
Tests/: CMakeLists.txt  Tests.cpp
